# swin-transformer

./: .gitignore  1_12chatprompttemplate的使用.py  1_14chain的基础使用.py  1_25内存向量存储.py  1_28向量检索构建提示词.py  1_4langchain的流式输出.py  1_5langchain调用聊天模型.py  1_7langchain访问阿里云嵌入模型.py  1_9通用提示词模板.py  2_2agent_流式输出.py  2_3ReAct案例.py  3 car_rental_synchronous.py  README  api_key.py  car_rental_comparison.py  class_indices.json  dantou_bert.py  game.py  gymnasium_test.py  md5.text  model.py  openAI库.py  paper_draft.tex  plot_iters.py  predict.py  presentation.md  report.md  requirements.txt  student_homework_report.md  train.py  utils.py
.claude/: settings.local.json
LangChain-ReAct-Agent-main/agent/: react_agent.py
LangChain-ReAct-Agent-main/agent/tools/: agent_tools.py
LangChain-ReAct-Agent-main/model/: factory.py
LangChain-ReAct-Agent-main/rag/: rag_service.py  vector_store.py
LangChain-ReAct-Agent-main/utils/: logger_handler.py
RAG/KnowledgeBase-RAG-LLM-System-master/: config_data.py
chat_history/user_001/: messages.json
data/: info.csv  iris.csv
figures/: framework_inverse_tikz.tex  overview_tikz.tex
langchain_agent_learning/: 06提示词优化案例_金融信息抽取.py  08提示词优化案例_金融文本匹配判断.py  17StrOutputParser解析器.py  1_10FewShot提示词模板.py  1_11模版类的format和invoke方法.py  1_16Runnable接口源码查看.py  1_18JsonOutputParser解析器.py  1_19RunnableLambda的基础使用.py  1_20临时会话记忆.py  1_21长期会话记忆.py  1_26外部向量持久化存储.py  1_29runnablepassthrough的使用.py  1_2langchain访问阿里云通义千问大模型.py  1_3langchain访问Ollama本地模型.py  1_6langchain调用ollama的聊天模型.py  22csvloader的使用.py  2_1agent_demo_test
paper_swin-transformer/: arr_overview.tex  paper_draft.tex  paper_draft_zh.md  paper_draft_zh.tex
rl_algorithms/: __init__.py  a2c.py  dqn.py  ppo.py  reinforce.py  report.tex  run_comparison.py  sac.py  td3.py  utils.py
rt_detection/: CMakeLists.txt
rt_detection/include/: detector.h  frame_queue.h  postprocessor.h  preprocessor.h  types.h
rt_detection/src/: detector.cpp  main.cpp  postprocessor.cpp  preprocessor.cpp
run_results/: train_log_results.txt
scripts/: setup_remote_codex.sh
something_unkown/: classify.py  homework_grader.py  quick_sort.py
test_agent/: README.md
test_agent/KnowledgeBase-RAG-LLM-System-master/: knowledge_base.py
